# pykeystore

./: .gitignore  TODO.md  pyproject.toml  setup.py
pykeystore/: __init__.py  keyringstore.py  keystore.py  keystorex.py  password.py
tests/: tests.py
tests/data/: README.md
