[build-system]
requires = ["setuptools>=66.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pykeystore"
version = "1.1.3"
authors = [
  { name="Marc Berten-Nguyen", email="m.bertens@pe2mbs.nl" },
]
description = "Python keystore"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography"
]

dependencies = [
    "cryptography>=39.0.0",
    "keyring>=23.13.1",
    "chardet"
]

[project.urls]
"Homepage" = "https://github.com/pe2mbs/pykeystore"
"Bug Tracker" = "https://github.com/pe2mbs/pykeystore/issues"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["pykeystore"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default

[project.scripts]
python-keystore = "pykeystore.__main__:main"

